# skuch1cloud

./: .editorconfig  .env.defaults  .gitignore  README.md  RULES.md  codex_project_review_skuch1cloud_ru.md  pyproject.toml  requirements.txt  review_processing_result_skuch1cloud_ru.md  sonnet_code_review_skuch1cloud.md  генерация бесплатным агентом.txt
src/: __main__.py  bot.py  config.py  file_handler.py  handlers.py  main.py  reporting.py  texts.py  ui_formatter.py  url_handler.py  users.py  utils.py
src/skuch1cloud.egg-info/: PKG-INFO  SOURCES.txt
