[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skuch1cloud"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "aiogram",
  "aiohttp",
  "python-dotenv",
]

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main"]
